Make things look nicer in Holo devices